[gd_scene load_steps=70 format=4 uid="uid://ctwboxocf20p8"]

[ext_resource type="Material" uid="uid://bxbqlqyxp0yep" path="res://assets/laptopshader.tres" id="1_lpgby"]
[ext_resource type="Script" path="res://title.gd" id="1_pdbem"]
[ext_resource type="Shader" uid="uid://b31kqg66ubtrd" path="res://assets/sketchy.tres" id="1_uodwl"]
[ext_resource type="Texture2D" uid="uid://bawcsmvyq68vm" path="res://assets/TitlePsi.png" id="2_rcraw"]
[ext_resource type="Script" path="res://simpleSpriteAnim.gd" id="3_jdnd3"]
[ext_resource type="Shader" uid="uid://1xjilaspysh5" path="res://assets/tripleframe.tres" id="4_1v7oa"]
[ext_resource type="ArrayMesh" uid="uid://df6pd66gwaolh" path="res://assets/mouse.obj" id="4_5112e"]
[ext_resource type="Texture2D" uid="uid://cdcsm82oycmjv" path="res://assets/Button1.png" id="5_1c584"]
[ext_resource type="Texture2D" uid="uid://oblslppwn8j4" path="res://assets/cardboardPhysicsObject.png" id="5_4eqnm"]
[ext_resource type="Texture2D" uid="uid://bl13842phmc1n" path="res://assets/Button2.png" id="6_68c3w"]
[ext_resource type="ArrayMesh" uid="uid://rvuyv4a23kxb" path="res://assets/Q.U.B.E.obj" id="6_agech"]
[ext_resource type="ArrayMesh" uid="uid://crd6yqv2ww2g" path="res://assets/Figure.obj" id="7_hm6bu"]
[ext_resource type="Texture2D" uid="uid://648ktkqjvyhd" path="res://assets/Button3.png" id="7_wa2px"]
[ext_resource type="Texture2D" uid="uid://hq50o821bmea" path="res://assets/FigureTexture.png" id="8_1cll5"]
[ext_resource type="Texture2D" uid="uid://djoxefg826ved" path="res://assets/Title.png" id="13_m1mnh"]
[ext_resource type="Script" path="res://simpleRetexture.gd" id="15_7e7si"]
[ext_resource type="Texture2D" uid="uid://dscqwbnmpbic1" path="res://assets/TextSprites/Play1.png" id="15_g1ig0"]
[ext_resource type="Texture2D" uid="uid://m03gxgjmsqx5" path="res://assets/TextSprites/Play2.png" id="16_445em"]
[ext_resource type="Texture2D" uid="uid://trl4kghqu4y1" path="res://assets/Title2.png" id="16_f4o7e"]
[ext_resource type="Texture2D" uid="uid://bwfmqwohdclxj" path="res://assets/TextSprites/Play3.png" id="17_5vb2f"]
[ext_resource type="Texture2D" uid="uid://8v322qagfrlm" path="res://assets/TextSprites/Options1.png" id="18_fcgv7"]
[ext_resource type="Texture2D" uid="uid://ecwadr8nghnc" path="res://assets/TextSprites/Options2.png" id="19_uk8ru"]
[ext_resource type="Texture2D" uid="uid://b75jvqi70opvd" path="res://assets/TextSprites/Options3.png" id="20_e42m3"]
[ext_resource type="Texture2D" uid="uid://dxmb4cefmsou5" path="res://assets/TextSprites/Credits1.png" id="21_41gpk"]
[ext_resource type="Texture2D" uid="uid://b7edpecwt846n" path="res://assets/TextSprites/Credits2.png" id="22_mkd72"]
[ext_resource type="Texture2D" uid="uid://b3lim4byljv4n" path="res://assets/TextSprites/Credits3.png" id="23_vfodt"]
[ext_resource type="Texture2D" uid="uid://cw1fsd3wogili" path="res://assets/darken.svg" id="27_2jivj"]
[ext_resource type="AudioStream" uid="uid://2bxsmib8e14e" path="res://assets/sound/Music/title.ogg" id="28_awhgc"]
[ext_resource type="Texture2D" uid="uid://cnd3j2x00gik2" path="res://assets/CreditPortraits.png" id="28_b3sm3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7hcn0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_h1k1j"]
sky_material = SubResource("ProceduralSkyMaterial_7hcn0")

[sub_resource type="Environment" id="Environment_v4fp0"]
background_mode = 2
sky = SubResource("Sky_h1k1j")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uokkb"]

[sub_resource type="ArrayMesh" id="ArrayMesh_smjsg"]
_surfaces = [{
"aabb": AABB(-0.8, -0.2, 0, 1.6, 0.2, 1.30001),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("zcxMv8rMTL5nZqY/zcxMvwAAILNnZqY/zcxMv8rMTL4AAACAzcxMvwAAILMAAACAzcxMP8rMTL5nZqY/zcxMPwAAILNnZqY/zcxMP8rMTL4AAACAzcxMPwAAILMAAACA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_j2p3y"]
resource_name = "laptop_Cube_001"
_surfaces = [{
"aabb": AABB(-0.8, -0.2, 0, 1.6, 0.2, 1.30001),
"attribute_data": PackedByteArray("ltVoPwLeCj+W1Wg/At4KP5bVaD8C3go/ldVoP8on/D6xn3U/At4KP3gLXD/2C/Q+1rMVPwDeCj/WsxU/AN4KP9azFT8A3go/1rMVP8Qn/D656Qg/AN4KP7npCD/2C/Q+k9VoP+8ucT+T1Wg/7y5xP5PVaD/vLnE/sZ91P+4ucT94C1w/cKidPZPVaD8N+X0/1bMVP+wucT/VsxU/7C5xP9WzFT/sLnE/uekIP+wucT+56Qg/cKidPdSzFT8J+X0/"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("StandardMaterial3D_uokkb"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("zcxMv8rMTL5nZqY/zcxMv8rMTL5nZqY/zcxMv8rMTL5nZqY/zcxMvwAAILNnZqY/zcxMvwAAILNnZqY/zcxMvwAAILNnZqY/zcxMv8rMTL4AAACAzcxMv8rMTL4AAACAzcxMv8rMTL4AAACAzcxMvwAAILMAAACAzcxMvwAAILMAAACAzcxMvwAAILMAAACAzcxMP8rMTL5nZqY/zcxMP8rMTL5nZqY/zcxMP8rMTL5nZqY/zcxMPwAAILNnZqY/zcxMPwAAILNnZqY/zcxMPwAAILNnZqY/zcxMP8rMTL4AAACAzcxMP8rMTL4AAACAzcxMP8rMTL4AAACAzcxMPwAAILMAAACAzcxMPwAAILMAAACAzcxMPwAAILMAAACAAAD/f/9//7//fwAA/3//v/9//3//f///AAD/f/9//7//f/9//3////9/////f/+/AAD/f/9//7//fwAA/3//v///////fwCAAAD/f/9//7///////38AgP9/////f/+//38AAP9//7//f/9//3/+/////3//f/+//3//f/9//v//f////3//v////3//f/+//38AAP9//7///////38AgP///3//f/+///////9/AID/f////3//v////3//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_smjsg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cwu2d"]

[sub_resource type="ArrayMesh" id="ArrayMesh_j7053"]
_surfaces = [{
"aabb": AABB(-0.8, -0.2, -1.3, 1.6, 0.2, 1.30001),
"format": 34359742465,
"index_count": 60,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQAAQAKAAUAAQAIAAoACwAIAAkACwAKAAgABwAJAAMABwALAAkABQALAAcABQAKAAsAAwAIAAEAAwAJAAgA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("zcxMv8rMTL4AAACAzcxMvwAAILMAAACAzcxMv8rMTL5nZqa/zcxMvwAAILNnZqa/zcxMP8rMTL4AAACAzcxMPwAAILMAAACAzcxMP8rMTL5nZqa/zcxMPwAAILNnZqa/MzMzvwAAILPNzMy9MzMzvwAAILOamZm/MzMzPwAAILPNzMy9MzMzPwAAILOamZm/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1x32y"]
resource_name = "laptop_Cube_002"
_surfaces = [{
"aabb": AABB(-0.8, -0.2, -1.3, 1.6, 0.2, 1.30001),
"attribute_data": PackedByteArray("9GbgPlhI9j70ZuA+WEj2PvRm4D5YSPY+9WbgPji92j71ZuA+OL3aPhDy+z5YSPY+EPL7PlhI9j5merU9VEj2PmZ6tT1USPY+Znq1PVRI9j5rerU9ML3aPmt6tT0wvdo+yJsOPVRI9j7Imw49VEj2Pu9m4D6yUGk/72bgPrJQaT/vZuA+slBpPw/y+z6yUGk/D/L7PrJQaT/tZuA+QxZ3P+1m4D5DFnc/Xnq1Pa9QaT9eerU9r1BpP156tT2vUGk/0JsOPa9QaT/Qmw49r1BpP1l6tT0/Fnc/WXq1PT8Wdz9oodI+qPfMPiCLmz7O28Q+0dsEP/YGAj+7kOw9nvfMPt+8ATzyBgI/37wBPMzbxD4gi5s+wLwBPNLbBD/pbWI/WaHSPg35fT8kvQE85m1iPwG9ATzAvAE8mZDsPQj5fT8="),
"format": 34359742487,
"index_count": 60,
"index_data": PackedByteArray("AAAKAAMAAAAHAAoACQAYAAwACQAWABgAFwAUABsAFwAQABQADwAFABEADwACAAUACAAOABUACAABAA4ABgAjABIABgAeACMAJgAdACEAJgAiAB0AGQAgAA0AGQAlACAAEwAnABoAEwAkACcACwAcAAQACwAfABwA"),
"material": SubResource("StandardMaterial3D_cwu2d"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray("zcxMv8rMTL4AAACAzcxMv8rMTL4AAACAzcxMv8rMTL4AAACAzcxMvwAAILMAAACAzcxMvwAAILMAAACAzcxMvwAAILMAAACAzcxMvwAAILMAAACAzcxMv8rMTL5nZqa/zcxMv8rMTL5nZqa/zcxMv8rMTL5nZqa/zcxMvwAAILNnZqa/zcxMvwAAILNnZqa/zcxMvwAAILNnZqa/zcxMvwAAILNnZqa/zcxMP8rMTL4AAACAzcxMP8rMTL4AAACAzcxMP8rMTL4AAACAzcxMPwAAILMAAACAzcxMPwAAILMAAACAzcxMPwAAILMAAACAzcxMPwAAILMAAACAzcxMP8rMTL5nZqa/zcxMP8rMTL5nZqa/zcxMP8rMTL5nZqa/zcxMPwAAILNnZqa/zcxMPwAAILNnZqa/zcxMPwAAILNnZqa/zcxMPwAAILNnZqa/MzMzvwAAILPNzMy9MzMzvwAAILPNzMy9MzMzvwAAILPNzMy9MzMzvwAAILOamZm/MzMzvwAAILOamZm/MzMzvwAAILOamZm/MzMzPwAAILPNzMy9MzMzPwAAILPNzMy9MzMzPwAAILPNzMy9MzMzPwAAILOamZm/MzMzPwAAILOamZm/MzMzPwAAILOamZm/AAD/f/9//7//fwAA/3//v/9//3//f///AAD/f/9//7//f////3//v/9//3//f////3///wAA/v8AAP9//3//v/9/AAD/f/+///////9/AIAAAP9//3//v/9/////f/+///////9/AID/f/////////9/AAD/f/+//3//f/9///////9//3//v/9//3//f////3///////v//f////3//v////3//f/+//38AAP9//7///////38AgP///3//f/+///////9/AID/f///AAD+//9/////f/+/////f/9//7//f////3//v/9/////f/+//3///wAA/v//f////3//v/9///8AAP///3////9//7//f////3//v/9///////7//3////9//7//f///AAD+//9/////f/+//3////9//78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_j7053")

[sub_resource type="Gradient" id="Gradient_tp64k"]
colors = PackedColorArray(0.921828, 0.858808, 0.772824, 1, 0.854902, 0.752941, 0.615686, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_guwyf"]
gradient = SubResource("Gradient_tp64k")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wj87"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = SubResource("GradientTexture1D_guwyf")

[sub_resource type="BoxMesh" id="BoxMesh_mfy8l"]
material = SubResource("ShaderMaterial_2wj87")
size = Vector3(5.815, 0.15, 2.24)
subdivide_width = 2
subdivide_depth = 2

[sub_resource type="Gradient" id="Gradient_50akn"]
colors = PackedColorArray(0.921828, 0.858808, 0.772824, 1, 0.854902, 0.752941, 0.615686, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hc2yi"]
gradient = SubResource("Gradient_50akn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tskbj"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = SubResource("GradientTexture1D_hc2yi")

[sub_resource type="BoxMesh" id="BoxMesh_vigh1"]
material = SubResource("ShaderMaterial_tskbj")
size = Vector3(17.345, 15.54, 0.63)
subdivide_width = 2
subdivide_height = 2
subdivide_depth = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vvuo4"]
render_priority = 0
shader = ExtResource("1_uodwl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4t50r"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("5_4eqnm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lykfv"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("8_1cll5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k6c83"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("8_1cll5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gcvtp"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("8_1cll5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ug6ih"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("8_1cll5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ekib"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("8_1cll5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dufpk"]
render_priority = 0
shader = ExtResource("1_uodwl")
shader_parameter/Texture2DParameter = ExtResource("8_1cll5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6uiht"]
shader = ExtResource("4_1v7oa")
shader_parameter/Tex1 = ExtResource("5_1c584")
shader_parameter/Tex2 = ExtResource("6_68c3w")
shader_parameter/Tex3 = ExtResource("7_wa2px")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pam3g"]
shader = ExtResource("4_1v7oa")
shader_parameter/Tex1 = ExtResource("15_g1ig0")
shader_parameter/Tex2 = ExtResource("16_445em")
shader_parameter/Tex3 = ExtResource("17_5vb2f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0gx3l"]
shader = ExtResource("4_1v7oa")
shader_parameter/Tex1 = ExtResource("6_68c3w")
shader_parameter/Tex2 = ExtResource("7_wa2px")
shader_parameter/Tex3 = ExtResource("5_1c584")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k5cgm"]
shader = ExtResource("4_1v7oa")
shader_parameter/Tex1 = ExtResource("18_fcgv7")
shader_parameter/Tex2 = ExtResource("19_uk8ru")
shader_parameter/Tex3 = ExtResource("20_e42m3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_laqks"]
shader = ExtResource("4_1v7oa")
shader_parameter/Tex1 = ExtResource("7_wa2px")
shader_parameter/Tex2 = ExtResource("6_68c3w")
shader_parameter/Tex3 = ExtResource("5_1c584")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4brn3"]
shader = ExtResource("4_1v7oa")
shader_parameter/Tex1 = ExtResource("21_41gpk")
shader_parameter/Tex2 = ExtResource("22_mkd72")
shader_parameter/Tex3 = ExtResource("23_vfodt")

[sub_resource type="AtlasTexture" id="AtlasTexture_5khoe"]
atlas = ExtResource("28_b3sm3")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_agcuu"]
atlas = ExtResource("28_b3sm3")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8p44"]
atlas = ExtResource("28_b3sm3")
region = Rect2(512, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccfgx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5khoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agcuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8p44")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6kcp"]
atlas = ExtResource("28_b3sm3")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8hnm"]
atlas = ExtResource("28_b3sm3")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcqa4"]
atlas = ExtResource("28_b3sm3")
region = Rect2(512, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_8jb07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6kcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8hnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcqa4")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="GDScript" id="GDScript_pkm6c"]
script/source = "extends AudioStreamPlayer


func _on_finished():
    play()
"

[node name="Node3D" type="Node3D"]
script = ExtResource("1_pdbem")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.926825, 0.325187, -0.187746, 1.47562e-08, 0.499998, 0.866026, 0.375493, 0.802655, -0.463411, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v4fp0")

[node name="laptop" type="Node3D" parent="."]
transform = Transform3D(-0.990304, 0, -0.138914, 0, 1, 0, 0.138914, 0, -0.990304, 0.101111, 0, -0.300522)

[node name="Cube" type="MeshInstance3D" parent="laptop"]
mesh = SubResource("ArrayMesh_j2p3y")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("1_lpgby")

[node name="Cube_001" type="MeshInstance3D" parent="laptop"]
transform = Transform3D(1, 0, 0, 0, 0.258819, -0.965926, 0, 0.965926, 0.258819, 0, 0, 0)
mesh = SubResource("ArrayMesh_1x32y")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("1_lpgby")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.887834, 0.0948713, -0.450279, 0, 0.978517, 0.206168, 0.460165, 0.183043, -0.86876, -2.39188, 1.50988, -3.32205)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-0.244154, 0.0260896, -0.123827, 0, 0.269092, 0.0566962, 0.126545, 0.0503368, -0.238909, 0.25563, 0.663833, -2.36366)
texture = ExtResource("2_rcraw")
vframes = 2
script = ExtResource("3_jdnd3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.300029, -0.411351)
mesh = SubResource("BoxMesh_mfy8l")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.300029, 1.10104)
mesh = SubResource("BoxMesh_vigh1")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.48843, -0.300029, 1.10104)
mesh = SubResource("BoxMesh_vigh1")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.21959, 0, -0.0968509, 0, 0.24, 0, 0.0968509, 0, -0.21959, -1.237, -0.165, -0.588)
mesh = ExtResource("4_5112e")
surface_material_override/0 = SubResource("ShaderMaterial_vvuo4")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.416891, 0, -0.68279, 0, 0.8, 0, 0.68279, 0, 0.416891, -2.36924, -0.0633265, -0.0961859)
material_override = SubResource("ShaderMaterial_4t50r")
mesh = ExtResource("6_agech")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.511593, 0, 0.859228, 0, 1, 0, -0.859228, 0, 0.511593, 1.5093, -0.145746, -0.224175)
mesh = ExtResource("7_hm6bu")
surface_material_override/0 = SubResource("ShaderMaterial_lykfv")
surface_material_override/1 = SubResource("ShaderMaterial_k6c83")
surface_material_override/2 = SubResource("ShaderMaterial_gcvtp")
surface_material_override/3 = SubResource("ShaderMaterial_ug6ih")
surface_material_override/4 = SubResource("ShaderMaterial_8ekib")
surface_material_override/5 = SubResource("ShaderMaterial_dufpk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -317.0
offset_top = -474.0
offset_right = 195.0
offset_bottom = 302.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.6, 0.6)

[node name="TextureButton" type="TextureButton" parent="Control/Buttons"]
material = SubResource("ShaderMaterial_6uiht")
layout_mode = 2
texture_normal = ExtResource("5_1c584")

[node name="TextureRect" type="TextureRect" parent="Control/Buttons/TextureButton"]
material = SubResource("ShaderMaterial_pam3g")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("15_g1ig0")

[node name="TextureButton2" type="TextureButton" parent="Control/Buttons"]
material = SubResource("ShaderMaterial_0gx3l")
layout_mode = 2
texture_normal = ExtResource("5_1c584")

[node name="TextureRect" type="TextureRect" parent="Control/Buttons/TextureButton2"]
material = SubResource("ShaderMaterial_k5cgm")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("18_fcgv7")

[node name="TextureButton3" type="TextureButton" parent="Control/Buttons"]
material = SubResource("ShaderMaterial_laqks")
layout_mode = 2
texture_normal = ExtResource("5_1c584")

[node name="TextureRect" type="TextureRect" parent="Control/Buttons/TextureButton3"]
material = SubResource("ShaderMaterial_4brn3")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("21_41gpk")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -845.0
offset_top = 5.0
offset_right = 1675.0
offset_bottom = 517.0
grow_horizontal = 0
scale = Vector2(0.33, 0.33)
texture = ExtResource("13_m1mnh")
script = ExtResource("15_7e7si")
frames = Array[Texture2D]([ExtResource("13_m1mnh"), ExtResource("16_f4o7e")])

[node name="Options" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="TextureRect" parent="Control/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_2jivj")

[node name="OptionsControls" type="VBoxContainer" parent="Control/Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -98.5
offset_right = 205.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2

[node name="MusicLabel" type="Label" parent="Control/Options/OptionsControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music volume"

[node name="MusSlider" type="HSlider" parent="Control/Options/OptionsControls"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="SoundLabel" type="Label" parent="Control/Options/OptionsControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Sound volume"

[node name="SfxSlider" type="HSlider" parent="Control/Options/OptionsControls"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="Button" type="Button" parent="Control/Options/OptionsControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Credits" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="TextureRect" parent="Control/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_2jivj")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Credits/Sprite2D"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Credits/Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Credits"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/Credits/Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Developed by Clarence and Epsilon of CE Studio"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Credits/Sprite2D/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Credits/Sprite2D/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Credits/Sprite2D/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "- Clarence -
Game concept, most
of the code, refreshing
Epsilon on Godot"
horizontal_alignment = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control/Credits/Sprite2D/VBoxContainer/HBoxContainer/Label"]
position = Vector2(16, -16)
rotation = -0.18326
scale = Vector2(0.705, 0.705)
sprite_frames = SubResource("SpriteFrames_ccfgx")
autoplay = "default"

[node name="VSeparator" type="VSeparator" parent="Control/Credits/Sprite2D/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Control/Credits/Sprite2D/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "- Epsilon -
Most of the art, all of
the sound, and about
half of the minigames"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control/Credits/Sprite2D/VBoxContainer/HBoxContainer/Label2"]
position = Vector2(401, -6.00002)
rotation = 0.366519
scale = Vector2(0.705, 0.705)
sprite_frames = SubResource("SpriteFrames_8jb07")
autoplay = "default"

[node name="Label3" type="Label" parent="Control/Credits/Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Character designs belong to both of us

Also Stereo Madness by ForeverBound"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control/Credits/Sprite2D/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back to main menu"

[node name="LinkButton" type="LinkButton" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.075
offset_top = -26.065
offset_right = 171.075
offset_bottom = 13.935
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "GPLv3 CE Studio 2023"
uri = "https://github.com/CE-Studio/sbigfics"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_awhgc")
autoplay = true
script = SubResource("GDScript_pkm6c")

[connection signal="pressed" from="Control/Buttons/TextureButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Buttons/TextureButton2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/Buttons/TextureButton3" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/Options/OptionsControls/Button" to="." method="_on_return_to_menu"]
[connection signal="pressed" from="Control/Credits/Sprite2D/VBoxContainer/Button" to="." method="_on_return_to_menu"]
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_finished"]
